<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">MrHyde</string>
    <string name="title_cloned_repos">Cloned repositories</string>
    <string name="title_clone_new_repo">Clone new repository</string>
    <string name="title_preview">Preview</string>
    <string name="title_commit">Commit changes</string>
    <string name="login_with_github_title">Login with GitHub</string>
    <string name="login_with_bitbucket_title">Login with Bitbucket</string>
    <string name="login_with_gitlab_title">Login with GitLab</string>
    <string name="login_error_title">Access denied</string>
    <string name="login_error_message">Sorry, but it looks like username or password are incorrect.</string>
    <string name="gitlab_login_token_hint">Paste your token here</string>
    <string name="gitlab_login_help_title">Create your personal access token</string>
    <string name="gitlab_login_help_msg">MrHyde needs a GitLab personal access token in order to
        list repositories and push changes.\n\nPlease create your token now and paste it below.\n\n
        Important: make sure you enable the two scopes "api" and "read_user"!
    </string>
    <string name="welcome_text">Welcome to \n MrHyde</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_rename">Rename</string>
    <string name="action_move">Move to …</string>
    <string name="action_clone">Clone repositoryt</string>
    <string name="action_commit">Commit</string>
    <string name="action_remote">Remote</string>
    <string name="action_pull">Pull</string>
    <string name="action_push">Push</string>
    <string name="action_switch_branch">Swith branch</string>
    <string name="action_preview">Preview</string>
    <string name="action_reset_repo">Reset repository</string>
    <string name="action_delete_repo">Delete local repository</string>
    <string name="action_close">Close</string>
    <string name="action_show_line_numbers">Line numbers</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_publish_draft">Publish draft</string>
    <string name="action_unpublish_post">Unpublish post</string>
    <string name="action_insert_markdown">Insert markdown</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_help">Help</string>
    <string name="select_git_hoster_title">Select provider</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="bitbucket" translatable="false">Bitbucket</string>
    <string name="gitlab" translatable="false">GitLab</string>
    <string name="clone_repo_title">Clone repository</string>
    <string name="clone_repo_message">Do you want to clone this repository to your device now?</string>
    <string name="clone_repo_confirm">Clone</string>
    <string name="clone_status_title">Cloning %1$s</string>
    <string name="clone_status_message">Fingers crossed!!</string>
    <string name="import_repo_title">Import old repository</string>
    <string name="import_repo_message">
        Local repository detected. This version of MrHyde uses a format for repositories that is incompatible
        with previous versions. You can try cloning this repo and importing changes from the old format, or simply only clone the repository
        and start fresh.
    </string>
    <string name="import_repo_confirm">Clone</string>
    <string name="import_repo_check_import">Import local repository</string>
    <string name="switch_branch_title">Select branch</string>
    <string name="select_destination_directory">Select destination directory</string>
    <string name="move">Move</string>
    <string name="overwrite_file_title">Overwrite file</string>
    <string name="overwrite_file_message">"Overwrite existing file %1$s?"</string>
    <string name="overwrite_confirm">Overwrite</string>
    <string name="file_moved">File moved</string>
    <string name="dir_moved">Directory moved</string>
    <string name="file_renamed">File renamed</string>
    <string name="dir_renamed">Directory renamed</string>
    <string name="file_deleted">File deleted</string>
    <string name="dir_deleted">Directory deleted</string>
    <string name="draft_published">Moved draft to posts</string>
    <string name="publish_draft_title">Publish draft?</string>
    <string name="publish_draft_message">Do you want to move this draft to %1$s?</string>
    <string name="post_unpublished">Moved post to drafts</string>
    <string name="unpublish_post_title">Unpublish post?</string>
    <string name="unpublish_post_message">Do you want to move this post to %1$s?</string>
    <string name="nothing_to_undo">Nothing to undo</string>
    <string name="nothing_to_redo">Nothing to redo</string>
    <string name="repos_last_update">Last pushed to on %1$s</string>
    <plurals name="posts_count">
        <item quantity="zero">no posts</item>
        <item quantity="one">1 post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="drafts_count">
        <item quantity="zero">no drafts</item>
        <item quantity="one">1 draft</item>
        <item quantity="other">%d drafts</item>
    </plurals>
    <string name="post_darft_count">%1$s &#8226; %2$s</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="new_post">New post</string>
    <string name="no_posts">No posts yet</string>
    <string name="drafts">Drafts</string>
    <string name="draft">Draft</string>
    <string name="new_draft">New draft</string>
    <string name="no_drafts">No drafts yet</string>
    <string name="all_files">All files</string>
    <string name="view_all_files">View all files</string>
    <string name="filename">Filename</string>
    <string name="your_awesome_title">Your awesome title</string>
    <string name="default_front_matter" translatable="false">---\nlayout: post\ntitle: %1$s\n---\n</string>
    <string name="file_new_title">New file</string>
    <string name="file_new_message">What do you want to call it?</string>
    <string name="file_new_hint">ducks.md</string>
    <string name="image_new_title">New image</string>
    <string name="image_new_message">What do you want to call it?</string>
    <string name="image_new_hint">duck.png</string>
    <string name="dir_new_title">New directory</string>
    <string name="dir_new_message">What do you want to call it?</string>
    <string name="dir_new_hint">ducks</string>
    <string name="file_already_exists">File already exists</string>
    <string name="dir_empty">Empty</string>
    <string name="rename_dir_title">Rename directory</string>
    <string name="rename_file_title">Rename file</string>
    <string name="rename_message">What do you want to call it?</string>
    <string name="rename_hint">ducks.md</string>
    <string name="delete_repo_title">Delete local repository</string>
    <string name="delete_repo_message">Delete all local content of this repository? Cannot be undone!</string>
    <string name="delete_repo_confirm">Delete</string>
    <string name="reset_repo_title">Reset repository</string>
    <string name="reset_repo_message">
        Remove all uncommitted changes in this repository? This is the same as running\n\ngit reset --hard HEAD\ngit clean -f -d\n\nCannot be undone!
    </string>
    <string name="reset_repo_confirm">Reset</string>
    <string name="reset_repo_success">Repository reset</string>
    <string name="delete_dir_title">Delete directory</string>
    <string name="delete_file_title">Delete file</string>
    <string name="delete_message">Do you want to delete %1$s?</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="directory">Directory</string>
    <string name="no_cloned_repos">No cloned repositories yet</string>
    <string name="marked_toast">Repo added to favourites list</string>
    <string name="unmarked_toast">Repo removed from favourites list</string>
    <string name="save_title">Unsaved changes</string>
    <string name="save_message">Save changes made to this file?</string>
    <string name="save_ok">Save</string>
    <string name="save_cancel">Discard</string>
    <string name="commit_changed_files">%1$s changed files</string>
    <string name="commit_deleted">%1$s (deleted)</string>
    <string name="commit_git_diff">Git diff</string>
    <string name="commit_message">Commit Message</string>
    <string name="commit_message_default">Mr Hyde was here …</string>
    <string name="commit_action">Commit</string>
    <string name="commit_and_push_action">Commit + Push</string>
    <string name="commit_success">Commit success</string>
    <string name="commit_and_push_success">Commit + Push success</string>
    <string name="push_success">Push successful</string>
    <string name="pull_success">Pull successful</string>
    <string name="switch_branch_success">Switched to branch %1$s</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="about_msg">
        This app was developed as part of the Android Challenge: one app every month for one year
        (think of it as a New Year\'s resolution). MrHyde is our project for April.&lt;br/&gt;
        &lt;br/&gt;
        If you want to know more, be sure to check out our &lt;a href=&quot;http://faudroids.org&quot;&gt;website&lt;/a&gt;.
        This app is &lt;b&gt;open source&lt;/b&gt; and you can find everything on &lt;a href=&quot;https://github.com/FauDroids/MrHyde&quot;&gt;GitHub&lt;/a&gt;.&lt;br/&gt;
        &lt;br/&gt;
        We would love to hear from you! Send us an &lt;a href=&quot;mailto:ideas@faudroids.org&quot;&gt;email&lt;/a&gt; and let us know what you think!&lt;br/&gt;
        &lt;br/&gt;
        The original developers are&lt;br/&gt;
        &lt;br/&gt;
        Philipp Eichhorn&lt;br/&gt;
        Simon Hofmann&lt;br/&gt;
        Julia Schottenhamml&lt;br/&gt;
        Richard Baumann&lt;br/&gt;
        &lt;br/&gt;
        Spanish translation by Ricardo Velázquez Contreras&lt;br/&gt;
        Dutch translation by Haroen Viaene&lt;br/&gt;
        &lt;br/&gt;
        Happy coding!
    </string>
    <string name="credits">Credits</string>
    <string name="markdown_bold">Bold font</string>
    <string name="markdown_italic">Italic font</string>
    <string name="markdown_link">Link</string>
    <string name="markdown_image">Image Link</string>
    <string name="markdown_h1">H1 heading</string>
    <string name="markdown_h2">H2 heading</string>
    <string name="markdown_h3">H3 heading</string>
    <string name="markdown_h4">H4 heading</string>
    <string name="markdown_h5">H5 heading</string>
    <string name="markdown_h6">H6 heading</string>
    <string name="markdown_ul">List from selection</string>
    <string name="markdown_ol">Ordered list from selection</string>
    <string name="markdown_quote">Quote from selection</string>
    <string name="markdown_code">Code block from selection</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_msg">To get started with your awesome blog, sign in to your repository provider below.</string>
    <string name="welcome_import">Upgrading? Don’t worry, you will have the option to import any old changes when cloning your repository.</string>
</resources>