<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      >

    <item
        android:id="@+id/action_preview"
        android:icon="@drawable/ic_preview"
        android:title="@string/action_preview"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_commit"
        android:icon="@drawable/ic_commit"
        android:title="@string/action_commit"
        app:showAsAction="ifRoom"
        />

    <item
        android:icon="@drawable/ic_cloud_white"
        android:title="@string/action_remote"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/action_push"
                android:title="@string/action_push"
                android:icon="@drawable/ic_cloud_upload_black"
                />
            <item
                android:id="@+id/action_pull"
                android:title="@string/action_pull"
                android:icon="@drawable/ic_cloud_download_black"
                />
        </menu>
    </item>

    <item
        android:id="@+id/action_switch_branch"
        android:title="@string/action_switch_branch"
        android:icon="@drawable/ic_branch_white"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_reset_repo"
        android:title="@string/action_reset_repo"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete_repo"
        android:title="@string/action_delete_repo"
        app:showAsAction="never"
        />


</menu>