<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_redo"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_preview"
        android:icon="@drawable/ic_preview"
        android:title="@string/action_preview"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_show_line_numbers"
        android:checkable="true"
        android:title="@string/action_show_line_numbers"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_insert_markdown"
        android:title="@string/action_insert_markdown"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        />
</menu>