<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fragment_markdown"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_markdown_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_bold"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_italic"
            android:textStyle="italic"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_link"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_image"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_quote"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_ul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_ul"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_ol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_ol"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_code"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_markdown_h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_h1"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_markdown_h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_h2"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_markdown_h3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_h3"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_h4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_h4"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_h5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_h5"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_markdown_h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markdown_h6"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</ScrollView>
</FrameLayout>
