<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    >

    <org.faudroids.mrhyde.ui.utils.UnscrollableRecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/list_padding_bottom"
        android:paddingTop="@dimen/list_padding_top"
        />

    <TextView
        android:id="@+id/empty"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_cloned_repos"
        android:textStyle="italic"
        style="@style/TextSecondary"
        />

    <include layout="@layout/tint"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        fab:fab_addButtonColorNormal="@color/red"
        fab:fab_addButtonColorPressed="@color/red_dark"
        fab:fab_addButtonPlusIconColor="@android:color/white"
        fab:fab_labelsPosition="left"
        fab:fab_labelStyle="@style/AddButtonLabelStyle"
        >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_colorPressed="@color/gray_light_2"
            fab:fab_icon="@drawable/octocat_black"
            fab:fab_size="mini"
            fab:fab_title="@string/github"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_bitbucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_colorPressed="@color/gray_light_2"
            fab:fab_icon="@drawable/bitbucket_black"
            fab:fab_size="mini"
            fab:fab_title="@string/bitbucket"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <include layout="@layout/spinner" />

</RelativeLayout>